# r-hassclient

./: Cargo.toml  DEV.md  LICENSE  README.md  docker-compose.yaml  ha_client.rs  main.rs
appruntime/: Cargo.toml
appruntime/examples/: test.rs
appruntime/src/: appruntime.rs  lib.rs
client/: Cargo.toml
client/examples/: subscribe_to_events.rs
client/src/: client.rs  errors.rs
client/src/types/: commands.rs  config.rs  events.rs
config/: home-assistant.log.1  home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal
config/.storage/: assist_pipeline.pipelines  auth  auth_provider.homeassistant  core.area_registry  core.config  core.config_entries  core.device_registry  core.entity_registry  core.restore_state  core.uuid  frontend.user_data_f89f13024806490b8d879160843ddf54  http  http.auth  input_boolean  person
http/: http.http
src/: client.rs  home_assistant.rs  lib.rs  main.rs  types.rs
src/client/: event_stream.rs  mod.rs
src/home_assistant/: commands.rs  event.json  mod.rs  model.rs  responses.rs
src/types/: commands.rs  mod.rs  responses.rs
src/types/tests/: responses.rs
tests/: ha_container.rs
