[package]
name = "r-hassclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.0"
mini-redis = "0.4"
url = "2.4.0"
serde_json = "1.0.105"
tokio-util = "0.7.8"
simple-error = "0.3.0"
colored = "2.0.4"
serde = { version = "1.0.188", features = ["derive"] }

[dev-dependencies]
# bollard = "0.13.0"
bollard = "0.11.0"
bollard-stubs = "1.41.0"
ctor = "0.2.4"
lazy_static = "1.4.0"
reqwest = {versio = "0.11.20", features =["json"]}
testcontainers = "0.14.0"
#testcontainers = "0.14.0"
tokio = { version = "1", features = [ "macros" ] }
#[[bin]]
#name = "r-hassclient"
#path = "src/main.rs"
